tela-de-login-8

--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
             <div class="login-inputs">
                 <div class="inputs-nome">
                     <label for="Nome">Nome</label>
-                    <input type="text" placeholder="Nome">
+                    <input type="text" placeholder="Nome" id="nome">
                 </div>
 
                 <div class="inputs-senha">
                     <label for="Senha">Senha</label>
-                    <input type="password" placeholder="Senha">
+                    <input type="password" placeholder="Senha" id="senha">
                 </div>
             </div>
-            <button>Entrar</button>
+            <button onclick="logar()">Entrar</button> 
         </div>
     </div>
+
+    <script src="login.js"></script>
 </body>
 </html>
